# bb_clock

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: appwindow.slint
