[package]
name = "my-clock"
version = "0.1.0"
authors = ["zhoujun <zhoujun681@qq.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
chrono = "0.4"

[build-dependencies]
slint-build = "1.3"
winres = "0.1"